[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pycm"
version = "0.1.0"
authors = [
  {name="Stanislav Kraev", email="mail@kraev.me"},
]
description = "python wrapper around ssh controlmaster"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = []
